# GBxyz

./: CMakeLists.txt  README.md
src/: Bootstrap.c  Bootstrap.h  CPU.c  Log.h  Log.hpp  Main.c  Memory.c  Memory.h  Registers.c  Registers.cpp  Registers.h  Registers.hpp  cpu.h  main.cpp
src/instructions/: dec.h  inc.h  jump.h  load.h  misc.h  pop.h  push.h  restart.h
test/: tinyUT.h
tests/: inc_test.c  push_test.c  tinyUT.h
